objects/Tender_Average_Car__c.object
<CustomObject>
    <description>this object hold the breakdown of cars per Tender over its life cycle</description>
    <fields>
        <fullName>Cars__c</fullName>
        <label>Cars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Text__c</fullName>
        <formula>TEXT( Fiscal_Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Tender Average Cars</relationshipLabel>
        <relationshipName>Tender_Average_Cars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Winning_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winning Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tender Average Cars</relationshipLabel>
        <relationshipName>Tender_Average_Cars</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tender Average Car</label>
    <nameField>
        <label>Tender Average Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tender Average Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>